--- a/app/views/heroines/index.html.erb
+++ b/app/views/heroines/index.html.erb
@@ -1,9 +1,15 @@
 <h2>All Heroines</h2>
 
+<!-- <%= form_tag("/search", method: "get") do %>
+  <h3><%= label_tag(:q, "Search superpower for heroines:") %><br></h3>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+<% end %> -->
+
 <ul>
   <% @heroines.each do |heroine| %>
     <li>
-      <%= heroine.super_name %>
+      <%= link_to heroine.super_name, heroine %>
     </li>
     <br>
   <% end %>
