--- a/app/views/heroines/show.html.erb
+++ b/app/views/heroines/show.html.erb
@@ -1,3 +1,7 @@
+<% if flash[:notice] %>
+  <p><%= flash[:notice] %><p>
+<% end %>
+
 <h1><%= @heroine.super_name %></h1>
 <p>Name: <%= @heroine.name %></p>
 <p>Super name: <%= @heroine.super_name %></p>
