--- a/app/views/heroines/index.html.erb
+++ b/app/views/heroines/index.html.erb
@@ -3,8 +3,10 @@
 <ul>
   <% @heroines.each do |heroine| %>
     <li>
-      <%= heroine.super_name %>
-    </li>
-    <br>
+      <%= link_to(heroine.name, heroine_path(heroine)) %>
+    </li><br>
   <% end %>
 </ul>
+
+
+<%= link_to("Create A New Heroine", new_heroine_path) %>
