--- a/app/views/heroines/index.html.erb
+++ b/app/views/heroines/index.html.erb
@@ -3,8 +3,10 @@
 <ul>
   <% @heroines.each do |heroine| %>
     <li>
-      <%= heroine.super_name %>
+      <%= link_to heroine.super_name, heroine_path(heroine) %>
     </li>
     <br>
   <% end %>
 </ul>
+
+<p><%= link_to "Create a new heroine", new_heroine_path %></p>
