--- a/app/views/heroines/index.html.erb
+++ b/app/views/heroines/index.html.erb
@@ -1,10 +1,22 @@
-<h2>All Heroines</h2>
+<h1>All Heroines</h1>
+
+<h2>Search By Superpower:</h2>
+<!-- BONUS STUFF  -->
+
+<%= form_tag(heroines_path, method: "get") do %>
+  <%= label_tag(:q, "Search for:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+<% end %>
+<!-- END BONUS STUFF -->
 
 <ul>
   <% @heroines.each do |heroine| %>
     <li>
-      <%= heroine.super_name %>
+      <%= link_to heroine.super_name, heroine %>
     </li>
     <br>
   <% end %>
 </ul>
+
+<%= link_to "Create new Hero", new_heroine_path %>
