--- a/app/views/heroines/index.html.erb
+++ b/app/views/heroines/index.html.erb
@@ -1,5 +1,7 @@
 <h2>All Heroines</h2>
 
+<!-- if time permits, try datalist -->
+<!-- on second thought, maybe datalist only works for form_for? -->
 <h4>Search By Superpower:</h4>
 <%= form_tag(heroines_path, method: "get") do %>
   <%= text_field_tag(:power, params[:power]) %>
