--- a/app/views/heroines/index.html.erb
+++ b/app/views/heroines/index.html.erb
@@ -1,10 +1,24 @@
-<h2>All Heroines</h2>
+<h1>All Heroines</h1>
+
+<h3>Search by Super Power:</h3>
+
+
+<%= form_tag heroines_path, method: :get do %>
+  <%= text_field_tag(
+      :search,
+      params[:search],
+      placeholder: "Search Super Powers",
+  ) %>
+  <%= submit_tag "Search" %>
+<% end %>
 
 <ul>
   <% @heroines.each do |heroine| %>
     <li>
-      <%= heroine.super_name %>
+      <%= link_to heroine.super_name, heroine %>
     </li>
     <br>
   <% end %>
 </ul>
+
+<p><%= link_to "Add a New Heroine", new_heroine_path %></p>
