--- a/app/views/heroines/index.html.erb
+++ b/app/views/heroines/index.html.erb
@@ -3,8 +3,14 @@
 <ul>
   <% @heroines.each do |heroine| %>
     <li>
-      <%= heroine.super_name %>
+      <%= link_to heroine.super_name, heroine %>
     </li>
     <br>
   <% end %>
 </ul>
+
+
+<%= link_to  "Create a Heroine!", new_heroine_path %>
+<br>
+<br>
+<%= link_to  "See all Powers!", powers_path %></p>
