--- a/app/views/powers/index.html.erb
+++ b/app/views/powers/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @powers.each do |power| %>
     <li>
-      <%= power.name %>
+      <h3><%= link_to power.name, power %></h3>
       <br>
       Description: <%= power.description %>
     </li>
