--- a/app/views/heroines/index.html.erb
+++ b/app/views/heroines/index.html.erb
@@ -1,10 +1,17 @@
 <h2>All Heroines</h2>
+<br>
+<% if flash[:notice] %>
+<%= flash[:notice] %>
+<% end %>
+
 
 <ul>
   <% @heroines.each do |heroine| %>
     <li>
-      <%= heroine.super_name %>
+      <%= link_to heroine.super_name, heroine %>
     </li>
     <br>
   <% end %>
+
+  <%= link_to "Make a New Hero!", new_heroine_path %>
 </ul>
