--- a/app/views/powers/index.html.erb
+++ b/app/views/powers/index.html.erb
@@ -3,10 +3,12 @@
 <ul>
   <% @powers.each do |power| %>
     <li>
-      <%= power.name %>
+      <%= link_to power.name.titleize, power %>
       <br>
       Description: <%= power.description %>
     </li>
     <br>
   <% end %>
 </ul>
+
+<%= link_to 'All Heroines', heroines_path %>
