--- a/app/views/heroines/index.html.erb
+++ b/app/views/heroines/index.html.erb
@@ -1,10 +1,19 @@
-<h2>All Heroines</h2>
+<% if flash[:destroy] %>
+  <%= flash[:destroy] %>
+<% end %>
+
+
+<h2 class="center">All Heroines</h2>
+
+<h3 class="right"><%= link_to 'Create A New Super Heroine', new_heroine_path %></h3>
 
 <ul>
   <% @heroines.each do |heroine| %>
     <li>
-      <%= heroine.super_name %>
+      <%= link_to heroine.super_name, heroine %>
     </li>
     <br>
   <% end %>
 </ul>
+
+<%= link_to 'All Super Powers', powers_path%>
