--- a/app/views/heroines/new.html.erb
+++ b/app/views/heroines/new.html.erb
@@ -12,6 +12,6 @@
   <%= f.label :super_name %>
     <%= f.text_field :super_name %> <br><br>
   <%= f.label :power %>
-    <%= f.collection_select :power, Power.all, :id, :name %>
+    <%= f.collection_select :power_id, Power.all, :id, :name %>
 <%= f.submit %>
 <% end %>
