added power_id in strong params

--- a/app/views/heroines/show.html.erb
+++ b/app/views/heroines/show.html.erb
@@ -5,7 +5,7 @@
 <h3>
   <%= @heroine.name %> <br>
   <%= @heroine.super_name %> <br>
-  power: <%= link_to @heroine.power.name, power_path(@heroine.power_id) %>
+  power: <%= link_to @heroine.power.name, power_path(@heroine.power) %>
 
 </h3>
 </ul>
