--- a/app/views/heroines/index.html.erb
+++ b/app/views/heroines/index.html.erb
@@ -1,10 +1,10 @@
 <h2>All Heroines</h2>
 
-<!-- <%= form_tag("/search", method: "get") do %>
-  <h3><%= label_tag(:q, "Search superpower for heroines:") %><br></h3>
-  <%= text_field_tag(:q) %>
-  <%= submit_tag("Search") %>
-<% end %> -->
+<%= form_tag(heroines_path, method: :get) do %>
+  <h3><%= label_tag :power_name, "Search superpower for heroines:" %><br></h3>
+  <%= text_field_tag :power_name %>
+  <%= submit_tag "Search",name: nil %>
+<% end %>
 
 <ul>
   <% @heroines.each do |heroine| %>
